--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
 
 
 
+<h3>June 5, 2020</h3>
+<h1>NeurIPS Paper Deadline Today</h1>
+<br>
+
+The  <a href="https://nips.cc">NeurIPS</a> deadline has passed! Finally, I can relax a bit (= 1 day). Next deadline:
+Supplementary Material for NeurIPS, on June 11... <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>June 1, 2020</h3>
 <h1>Five Papers Accepted to ICML 2020</h1>
 <br>
