--- a/index.html
+++ b/index.html
@@ -44,13 +44,33 @@
 
 
 
-
-<h3>June 5, 2020</h3>
-<h1>NeurIPS Paper Deadline Today</h1>
+<h3>June 10, 2020</h3>
+<h1>New Paper: </h1>
 <br>
 
-The  <a href="https://nips.cc">NeurIPS</a> deadline has passed! Finally, I can relax a bit (= 1 day). Next deadline:
-Supplementary Material for NeurIPS, on June 11... <br>
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2005.01097">"Random Reshuffling: Simple Analysis with Vast Improvements"</a> -
+joint work with <a href="https://konstmish.github.io">Konstantin Mishchenko</a> and
+<a href="https://rka97.github.io">Ahmed Khaled</a>.<br>
+<br>
+
+Abstract: <i>
+Random Reshuffling (RR) is an algorithm for minimizing finite-sum functions that utilizes iterative gradient
+descent steps in conjunction with data reshuffling. Often contrasted with its sibling Stochastic Gradient
+Descent (SGD), RR is usually faster in practice and enjoys significant popularity in convex and non-convex
+optimization. The convergence rate of RR has attracted substantial attention recently and, for strongly
+convex and smooth functions, it was shown to converge faster than SGD if 1) the stepsize is small, 2) the
+gradients are bounded, and 3) the number of epochs is large. We remove these 3 assumptions, improve the
+ependence on the condition number from $\kappa^2$ to $\kappa$ (resp.\ from $\kappa$ to $\sqrt{kappa}$) and,
+in addition, show that RR has a different type of variance. We argue through theory and experiments that the
+new variance type gives an additional justification of the superior performance of RR. To go beyond strong
+convexity, we present several results for non-strongly convex and non-convex objectives. We show that in all
+cases, our theory improves upon existing literature. Finally, we prove fast convergence of the Shuffle-Once
+(SO) algorithm, which shuffles the data only once, at the beginning of the optimization process. Our theory
+for strongly-convex objectives tightly matches the known lower bounds for both RR and SO and substantiates
+the common practical heuristic of shuffling once or only a few times. As a byproduct of our analysis, we also
+get new results for the Incremental Gradient algorithm (IG), which does not shuffle the data at all.
+</i> <br>
 
 
 <br>
@@ -59,6 +79,21 @@ Supplementary Material for NeurIPS, on June 11... <br>
 <br>
 <br>
 
+
+
+
+<h3>June 5, 2020</h3>
+<h1>NeurIPS Paper Deadline Today</h1>
+<br>
+
+The  <a href="https://nips.cc">NeurIPS</a> deadline has passed! Finally, I can relax a bit (= 1 day). Next deadline:
+Supplementary Material for NeurIPS, on June 11... <br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
 
 
 
