--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
+          <b>Random Reshuffling: Simple Analysis with Vast Improvements</b><br>
+          [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  <br>
+          <br>
+
           [131] Motasem Alfarra, Slavomír Hanzely, Alyazeed Albasyoni, Bernard Ghanem, and Peter Richtárik <br>
           <b>Adaptive learning of the optimal mini-batch size of SGD</b><br>
           [<a href="https://arxiv.org/abs/2005.01097">arXiv</a>]  <br>
