--- a/i_software.html
+++ b/i_software.html
@@ -42,8 +42,23 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
+
+
           <table width="831" border="1">
             <tbody>
+
+
+              <tr>
+                <td valign="top" align="center"><a
+                    href="https://github.com/konstmish/random_reshuffling">RR, SO</a><br>
+                </td>
+                <td valign="top">Random Reshufflig and Shuffle Once algorithms. Based on the paper
+                  <a href="https://arxiv.org/abs/2006.05988">Random Reshuffling: Simple Analysis with Vast Improvements, arXiv:2006.05988, 2020</a>.<br>
+                </td>
+              </tr>
+
+
               <tr>
                 <td valign="top" align="center"><a
                     href="https://github.com/QIANXunK/Code_SAGA_AS">SAGA-AS</a><br>
@@ -53,30 +68,20 @@
                     2019 paper</a>.<br>
                 </td>
               </tr>
+
+
               <tr>
                 <td valign="top" align="center">REX (R Shiny)<br>
                 </td>
                 <td valign="top">Randomized EXchange algorithms,
                   implemented as web-based R Shiny apps, for <a
-                    href="https://optdesign.shinyapps.io/od_rex/">computing
-
-
-
-
-
-
-                    optimal design of experiments</a> and <a
-                    href="https://optdesign.shinyapps.io/mvee_rex/">minimum
-
-
-
-
-
-
-                    volume enclosing ellipsoids</a>. Based on this
-                  paper.<br>
+                    href="https://optdesign.shinyapps.io/od_rex/">computing optimal design of experiments</a> and <a
+                    href="https://optdesign.shinyapps.io/mvee_rex/">minimum volume enclosing ellipsoids</a>. Based on <a href="https://www.tandfonline.com/doi/full/10.1080/01621459.2018.1546588">this
+                  paper.</a><br>
                 </td>
               </tr>
+
+
               <tr>
                 <td valign="top" align="center"><a
                     href="https://github.com/mehrhardt/spdhg">SPDHG</a><br>
@@ -104,15 +109,7 @@ href="https://perso.telecom-paristech.fr/rgower/software/StochBFGS_dist-0.0.zip"
                 </td>
                 <td valign="top">A suite of randomized methods for
                   inverting positive definite matrices implemented in
-                  MATLAB. <a href="http://arxiv.org/abs/1602.01768">Related
-
-
-
-
-
-
-
-                    paper.</a><br>
+                  MATLAB. <a href="http://arxiv.org/abs/1602.01768">Related paper.</a><br>
                 </td>
               </tr>
               <tr>
