--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
 
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
           <b>Random Reshuffling: Simple Analysis with Vast Improvements</b><br>
-          [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code": RR, SO, IG] <br>
+          [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
           <br>
 
           [131] Motasem Alfarra, Slavomír Hanzely, Alyazeed Albasyoni, Bernard Ghanem, and Peter Richtárik <br>
