--- a/i_papers.html
+++ b/i_papers.html
@@ -52,7 +52,7 @@
           <h1> Prepared in 2020 </h1>
 
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
-          <b>Random Reshuffling: Simple Analysis with Vast Improvements</b><br>
+          <b>Random reshuffling: simple analysis with vast improvements</b><br>
           [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
           <br>
 
