--- a/index.html
+++ b/index.html
@@ -44,6 +44,30 @@
 
 
 
+<h3>June 12, 2020</h3>
+<h1>Plenary Talk at Mathematics of Data Science Workshop</h1>
+<br>
+
+Today I gave a plenary talk at the <a href="https://maths-of-data.github.io/plenary-talks/">Mathematics of Data
+  Science</a> workshop.  I gave the same talk as the one I gave in April at
+the <a href="https://owos.univie.ac.at">One World Optimization Seminar:</a> <a href="https://www.youtube.com/watch?v=HGQkct3db-c">“On Second Order Methods and Randomness”,
+which is on YouTube.</a> If you ever wondered what a 2nd order version of SGD should and should not look like, you may want to watch
+the video talk. Our stochastic Newton (SN) method converges in 4/3 * n/tau * log 1/epsilon iterations when started
+close enough from the solution, where n is the number of functions forming the finite sum we want to minimize, and tau is the minibatch size.
+We can choose tau to be any value between 1 and n. Note that unlike all 1st order methods, the rate of SN is
+independent of the condition number! 4/n The talk is based on joint work with my fantastic students <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> and <a href="https://konstmish.github.io">Konstantin Mishchenko</a>:
+<a href="https://arxiv.org/abs/1912.01597">“Stochastic Newton and cubic Newton methods with simple local linear-quadratic rates”</a>,
+<a href="https://sites.google.com/site/optneurips19/">NeurIPS 2019 Workshop Beyond First Order Methods in ML</a>, 2019.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 10, 2020</h3>
 <h1>New Paper: </h1>
 <br>
