--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
 
 
 
+<h3>June 10, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2006.07013">"A Unified Analysis of Stochastic Gradient Methods for Nonconvex Federated Optimization"</a> -
+joint work with <a href="https://zhizeli.github.io">Zhize Li</a>.<br>
+<br>
+
+Abstract: <i>
+In this paper, we study the performance of a large family of SGD variants in the smooth nonconvex regime. To this end, we propose a generic and flexible assumption capable of accurate modeling of the second moment of the stochastic gradient. Our assumption is satisfied by a large number of specific variants of SGD in the literature, including SGD with arbitrary sampling, SGD with compressed gradients, and a wide variety of variance-reduced SGD methods such as SVRG and SAGA. We provide a single convergence analysis for all methods that satisfy the proposed unified assumption, thereby offering a unified understanding of SGD variants in the nonconvex regime instead of relying on dedicated analyses of each variant. Moreover, our unified analysis is accurate enough to recover or improve upon the best-known convergence results of several classical methods, and also gives new convergence results for many new methods which arise as special cases. In the more general distributed/federated nonconvex optimization setup, we propose two new general algorithmic frameworks differing in whether direct gradient compression (DC) or compression of gradient differences (DIANA) is used. We show that all methods captured by these two frameworks also satisfy our unified assumption. Thus, our unified convergence analysis also captures a large variety of distributed methods utilizing compressed communication. Finally, we also provide a unified analysis for obtaining faster linear convergence rates in this nonconvex regime under the PL condition.
+</i> <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 12, 2020</h3>
 <h1>Plenary Talk at Mathematics of Data Science Workshop</h1>
 <br>
@@ -69,7 +91,7 @@ independent of the condition number! 4/n The talk is based on joint work with my
 
 
 <h3>June 10, 2020</h3>
-<h1>New Paper: </h1>
+<h1>New Paper</h1>
 <br>
 
 <span class="important">New paper out:</span>
