--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,13 @@
 
           <h1> Prepared in 2020 </h1>
 
+
+          [133] Zhize Li and Peter Richtárik <br>
+          <b>A unified analysis of stochastic gradient methods for nonconvex federated optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>          
+          [<a href="https://arxiv.org/abs/2006.07013">arXiv</a>]   <br>
+          <br>
+
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
           <b>Random reshuffling: simple analysis with vast improvements</b><br>
           [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
