--- a/i_talks.html
+++ b/i_talks.html
@@ -74,10 +74,6 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
-<a href="https://maths-of-data.github.io">Mathematics of Data Science</a>, Virtual Conference, June 11-12, 2020 (keynote)
-</p>
-
-<p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
@@ -186,6 +182,11 @@ Simons Institute, Berkeley, 10/2013
 
 <h1>2020 Talks</h1>
 
+<p>
+[169]
+On Second Order Methods and Randomness,
+<a href="https://maths-of-data.github.io">Mathematics of Data Science</a>, Virtual Conference, June 11-12, 2020 (plenary speaker)
+</p>
 
 <p>
 [168]
