--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
 
 
 
+<h3>June 17, 2020</h3>
+<h1>5th FLOW seminar today</h1>
+<br>
+
+<a href="https://fhanzely.github.io">Filip Hanzely</a> gave a talk at the  <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW seminar today.</a>
+His <a href="https://drive.google.com/file/d/1X57EMpnO8UXLXpbZrxoxuh53heUmZ2h_/view?usp=sharing">slides</a> and
+<a href="https://www.youtube.com/watch?v=N10GwFwpt5I&feature=emb_title">video</a> of the talk can be found
+<a href="https://sites.google.com/view/one-world-seminar-series-flow/archive#h.64km7mxogc2u">here.</a>  <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 10, 2020</h3>
 <h1>New Paper</h1>
 <br>
