--- a/i_papers.html
+++ b/i_papers.html
@@ -51,10 +51,14 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [134] Adil Salim and Peter Richtárik <br>
+          <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm"</b><br>
+          [<a href="https://arxiv.org/abs/2006.09270">arXiv</a>] [code: PGSLA]  <br>
+          <br>
 
           [133] Zhize Li and Peter Richtárik <br>
           <b>A unified analysis of stochastic gradient methods for nonconvex federated optimization</b><br>
-          <span class="important">Federated Learning Paper</span><br>          
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2006.07013">arXiv</a>]   <br>
           <br>
 
