--- a/i_papers.html
+++ b/i_papers.html
@@ -52,7 +52,7 @@
           <h1> Prepared in 2020 </h1>
 
           [134] Adil Salim and Peter Richtárik <br>
-          <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm"</b><br>
+          <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm</b><br>
           [<a href="https://arxiv.org/abs/2006.09270">arXiv</a>] [code: PGSLA]  <br>
           <br>
 
