--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [135] Samuel Horváth and Peter Richtárik <br>
+          <b>A better alternative to error feedback for communication-efficient distributed learning</b><br>
+          [<a href="https://arxiv.org/abs/2006.11077">arXiv</a>] [code: DCSGD]  <br>
+          <br>
+
           [134] Adil Salim and Peter Richtárik <br>
           <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm</b><br>
           [<a href="https://arxiv.org/abs/2006.09270">arXiv</a>] [code: PGSLA]  <br>
