--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
         <div id="content">
 
 
+<h3>June 23, 2020</h3>
+<h1>6th FLOW seminar talk tomorrow</h1>
+<br>
+
+<a href="https://www.di.ens.fr/hadrien.hendrikx/">Hadrien Hendrikx</a> will give a talk at the  <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW seminar tomorrow.</a>
+Title of his talk: "Statistical Preconditioning for Federated Learning".
+  <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 22, 2020</h3>
 <h1>New Paper</h1>
 <br>
@@ -88,7 +105,7 @@ We consider the task of sampling with respect to a log concave probability distr
 
 
 <h3>June 17, 2020</h3>
-<h1>5th FLOW seminar today</h1>
+<h1>5th FLOW seminar talk today</h1>
 <br>
 
 <a href="https://fhanzely.github.io">Filip Hanzely</a> gave a talk at the  <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">FLOW seminar today.</a>
