--- a/index.html
+++ b/index.html
@@ -43,6 +43,38 @@
         <div id="content">
 
 
+
+<h3>June 23, 2020</h3>
+<h1>New Paper</h1>
+<br>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2006.11573">"Unified Analysis of Stochastic Gradient Methods for Composite Convex and Smooth Optimization"</a> -
+joint work with <a href="https://rka97.github.io">Ahmed Khaled</a>, <a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a>,
+<a href="https://www.maths.ed.ac.uk/~s1461357/">Nicolas Loizou</a>, and <a href="https://gowerrobert.github.io">Robert M. Gower</a>.<br>
+<br>
+
+Abstract: <i>
+We present a unified theorem for the convergence analysis of stochastic gradient algorithms for minimizing a smooth and convex loss plus a convex regularizer.
+We do this by extending the unified analysis of Gorbunov, Hanzely & Richtárik (2020) and dropping the requirement that the loss function be strongly convex.
+Instead, we only rely on convexity of the loss function. Our unified analysis applies to a host of existing algorithms such as proximal SGD, variance reduced
+methods, quantization and some coordinate descent type methods. For the variance reduced methods, we recover the best known convergence rates as special cases.
+For proximal SGD, the quantization and coordinate type methods, we uncover new state-of-the-art convergence rates. Our analysis also includes any form of sampling
+and minibatching. As such, we are able to determine the minibatch size that optimizes the total complexity of variance reduced methods. We showcase this by obtaining
+a simple formula for the optimal minibatch size of two variance reduced methods (\textit{L-SVRG} and \textit{SAGA}). This optimal minibatch size not only improves
+the theoretical total complexity of the methods but also improves their convergence in practice, as we show in several experiments.
+</i> <br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>June 23, 2020</h3>
 <h1>6th FLOW seminar talk tomorrow</h1>
 <br>
