--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2020 </h1>
 
+          [136] Ahmed Khaled, Othmane Sebbouh, Nicolas Loizou, Robert M. Gower, and Peter Richtárik <br>
+          <b>Unified analysis of stochastic gradient methods for composite convex and smooth optimization</b><br>
+          [<a href="https://arxiv.org/abs/2006.11573">arXiv</a>] [code: SGD]  <br>
+          <br>
+
           [135] Samuel Horváth and Peter Richtárik <br>
           <b>A better alternative to error feedback for communication-efficient distributed learning</b><br>
           [<a href="https://arxiv.org/abs/2006.11077">arXiv</a>] [code: DCSGD]  <br>
