--- a/i_papers.html
+++ b/i_papers.html
@@ -58,6 +58,7 @@
 
           [135] Samuel Horváth and Peter Richtárik <br>
           <b>A better alternative to error feedback for communication-efficient distributed learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2006.11077">arXiv</a>] [code: DCSGD]  <br>
           <br>
 
