--- a/i_talks.html
+++ b/i_talks.html
@@ -47,48 +47,25 @@
 
 <h1> Future Talks</h1>
 
+
+
+
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
 of Mathematical Sciences, National University of Singapore, Singapore, August 3-7, 2020 (invited) <span class="important">postponed until August 2022 due to Covid-19</span>
 </p>
 
 <p>
-2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
+<a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
+University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <span class="important">postponed until 2021 due to Covid-19</span>
 </p>
 
 <p>
-<a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods"</a>, Vienna, Austria, July  2020 (plenary)
-</p>
-
-<p>
-<a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020 <span class="important">virtual-only due to Covid-19</span>
-</p>
-
-<p>
-Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited)
-</p>
-
-<p>
-<a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
-session organizer) <span class="important">postponed due to Covid-19</span>
+Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
 <a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed due to Covid-19</span>
-</p>
-
-<p>
-<a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
-<span class="important">postponed due to Covid-19</span>
-</p>
-
-<p>
-<a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
-University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <span class="important">postponed due to Covid-19</span>
-</p>
-
-<p>
-<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
 </p>
 
 <p>
@@ -98,6 +75,47 @@ AI: Collaborate and Accelerate, College of Computer Sciences and Information Tec
 <p>
 Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
+
+
+
+
+
+
+<p>
+<a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods"</a>, Vienna, Austria, July  2020 (plenary)
+</p>
+
+<p>
+Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
+</p>
+
+<p>
+2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
+</p>
+
+<p>
+<a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020 <span class="important">virtual-only due to Covid-19</span>
+</p>
+
+<p>
+<a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
+session organizer) <span class="important">postponed due to Covid-19</span>
+</p>
+
+
+
+<p>
+<a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
+<span class="important">postponed due to Covid-19</span>
+</p>
+
+
+
+<p>
+<a href="https://iclr.cc/Conferences/2020/">ICLR 2020</a>, Addis Ababa, Ethiopia, April 26-30, 2020 <span class="important">virtual-only due to Covid-19</span> (accepted <a href="https://arxiv.org/abs/1905.13278">paper</a>)
+</p>
+
+
 
 
 
