Ilya Segalovich Prize

--- a/index.html
+++ b/index.html
@@ -44,6 +44,43 @@
 
 
 
+<h3>July 3, 2020</h3>
+<h1>Dmitry Kovalev Wins the 2020 Ilya Segalovich Scientific Prize</h1>
+<br>
+
+
+
+It is a great pleasure to announce that my PhD student <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> is one of nine recipients of the <a href="https://yandex.ru/blog/company/novye-laureaty-premii-imeni-segalovicha">2020 Ilya
+Segalovich Scientific Prize for Young Researchers</a>, awarded by Yandex (a Russian equivalent of Google or Baidu) for significant advances in Computer Science. The award is focused on research of particular interest to yandex:
+machine learning, computer vision, information search and data analysis, NLP and machine translation and speech synthesis/recognition.
+The prize carries a cash award of 350,000 RUB ( = approx 5,000 USD).
+<br>
+<br>
+
+Dmitry started MS studies at KAUST in Fall 2018 and received his MS degree in December 2019. He is a PhD student since January 2020. In this short period of time,
+he has co-authored 17 papers, 15 of which are online (<a href="https://scholar.google.com/citations?user=qHFA5z4AAAAJ">Google Scholar</a>).  In my view, he is one of
+the most talented young researchers coming in recent years from Russia. Dmitry's research is insighful, creative and deep.
+<br>
+<br>
+
+Google translate of the announcement in Russian:
+<br>
+<br><i>For the second time, we selected the laureates of the Ilya Segalovich Scientific Prize. Yandex marks this award for scientists who have made significant
+  advances in computer science. The prize is awarded once a year in two categories: “Young Researchers” and “Scientific Advisers”. The first nomination is for students, undergraduates and graduate students, the second - for their mentors.
+Mikhail Bilenko (Head of Machine Intelligence and Research at Yandex) said: "The services and technologies of Yandex are based on science. At the same time, we are interested not only in applied developments, but also in theoretical research. They move the entire industry forward and can lead to impressive results in the future. We established the Segalovich Prize to support students and graduate students who are engaged in machine learning and other promising areas of computer science. Often, talented guys go to work in the industry while still studying. We want them to have the opportunity to continue basic research - with our financial support."
+The winners are determined by the award council. It includes Yandex executives and scientists who collaborate with the company, including Ilya Muchnik, professor at Rutgers University in New Jersey, Stanislav Smirnov, professor at the University of Geneva and Fields laureate, and Alexei Efros, professor at the University of California at Berkeley. The size of the prize for young researchers is 350 thousand, and for scientific advisers - 700 thousand rubles.
+This year, 12 people became laureates: three supervisors and nine young scientists. When choosing laureates among scientific scientists, we first of all took into account the contribution to community development and youth work. For young researchers, the main criterion is scientific achievements.
+All laureates in the nomination “Young Researchers” have already managed to present their work at prestigious international conferences. Proceedings for such conferences are selected and reviewed by the world’s best experts in machine learning and artificial intelligence. If the work was accepted for publication at a conference, this is international recognition.</i><br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>June 23, 2020</h3>
 <h1>New Paper</h1>
 <br>
