--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>July 9, 2020</h3>
+<h1>Area Chair for ICLR 2021</h1>
+<br>
+
+I've accepted an invite to become an Area Chair for ICLR 2021.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>July 3, 2020</h3>
