--- a/i_papers.html
+++ b/i_papers.html
@@ -305,8 +305,9 @@
           [98] Aritra Dutta, Filip Hanzely, Jingwei Liang and Peter
           Richtárik<br>
           <b>Best pair formulation &amp; accelerated scheme for
-            non-convex principal component pursuit</b><b><br>
-          </b> [<a href="https://arxiv.org/abs/1905.10598">arXiv</a>]<br>
+            non-convex principal component pursuit</b><br>
+          To appear in: IEEE Transactions on Signal Processing, 2020 <br>
+          [<a href="https://arxiv.org/abs/1905.10598">arXiv</a>]<br>
           <br>
 
           [97] Nicolas Loizou and Peter Richtárik<br>
