--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@ I've accepted an invite to become an Area Chair for ICLR 2021.
 
 
 
+<h3>July 7, 2020</h3>
+<h1>Paper Accepted to IEEE Transcations on Signal Processing</h1>
+<br>
+
+The paper ``Best Pair Formulation & Accelerated Scheme for Non-convex Principal Component Pursuit'', joint with <a href="https://aritradutta.weebly.com">Aritra Dutta</a>,
+<a href="https://fhanzely.github.io/index.html">Filip Hanzely</a>, and <a href="https://jliang993.github.io">Jingwei Liang</a>, was accepted to
+IEEE Transactions on Signal Processing.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 <h3>July 3, 2020</h3>
 <h1>Dmitry Kovalev Wins the 2020 Ilya Segalovich Scientific Prize</h1>
 <br>
