--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ I've accepted an invite to become an Area Chair for ICLR 2021.
 
 
 <h3>July 7, 2020</h3>
-<h1>Paper Accepted to IEEE Transcations on Signal Processing</h1>
+<h1>Paper Accepted to IEEE Transactions on Signal Processing</h1>
 <br>
 
 The paper ``Best Pair Formulation & Accelerated Scheme for Non-convex Principal Component Pursuit'', joint with <a href="https://aritradutta.weebly.com">Aritra Dutta</a>,
