--- a/index.html
+++ b/index.html
@@ -42,6 +42,27 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+
+
+<h3>July 12, 2020</h3>
+<h1>Attending ICML 2020</h1>
+<br>
+
+I am attending ICML 2020 - the event is held virtually during July 12-18. My group members are presenting 5 papers, and I
+will give the opening  plenary talk at the <a href="https://sites.google.com/view/optml-icml2020/home">Beyond First Order
+  Methods in Machine Learning</a> workshops on Friday.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>July 9, 2020</h3>
 <h1>Area Chair for ICLR 2021</h1>
 <br>
