ICML 2020 workshop talk

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
         <div id="content">
 
 
+<h3>July 17, 2020</h3>
+<h1>Plenary Talk at ICML Workshop "Beyond First Order Methods in ML Systems"</h1>
+<br>
+
+Today, I have given the openinhg plenary talk at the ICML 2020 Workshop "Beyond First Order Methods in ML Systems".
+The slides from my talk "Fast Linear Convergence of Randomized BFGS" are <a href="talks/TALK-2020-07-RBFGS-ICML-workshop.pdf">here.</a>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
 
 <h3>July 12, 2020</h3>
 <h1>Attending ICML 2020</h1>
