--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 <h3>July 17, 2020</h3>
-<h1>Plenary Talk at ICML Workshop "Beyond First Order Methods in ML Systems"</h1>
+<h1>ICML Workshop "Beyond First Order Methods in ML Systems"</h1>
 <br>
 
 Today, I have given the openinhg plenary talk at the ICML 2020 Workshop "Beyond First Order Methods in ML Systems".
