--- a/i_talks.html
+++ b/i_talks.html
@@ -77,14 +77,6 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 </p>
 
 
-
-
-
-
-<p>
-<a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods"</a>, Vienna, Austria, July  2020 (plenary)
-</p>
-
 <p>
 Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (invited)
 </p>
@@ -93,9 +85,6 @@ Apple's Workshop on Privacy Preserving Machine Learning, August 25-26, 2020 (inv
 2020 Workshop on Federated Learning and Analytics, Google, Seattle, July 30-31, 2020 (invited)
 </p>
 
-<p>
-<a href="https://icml.cc">ICML 2020</a>, Vienna, Austria, July 13-18, 2020 <span class="important">virtual-only due to Covid-19</span>
-</p>
 
 <p>
 <a href="https://www.google.com/search?client=safari&amp;rls=en&amp;q=IFORS+2020&amp;ie=UTF-8&amp;oe=UTF-8">IFORS 2020</a>, Coex, Seoul, Korea, June 21-26, 2020 (invited
@@ -200,22 +189,32 @@ Simons Institute, Berkeley, 10/2013
 
 <h1>2020 Talks</h1>
 
+
+
+
+
+<p>
+[170]
+Talk "Fast Linear Convergence of Randomized BFGS" @
+<a href="https://icml.cc">ICML 2020</a> <a href="https://sites.google.com/view/optml-icml2020">Workshop: "Beyond First Order Methods in ML Systems"</a>, Vienna, Austria, July  2020 (plenary). [<a href="talks/TALK-2020-07-RBFGS-ICML-workshop.pdf">slides</a>]</p>
+
+
 <p>
 [169]
-On Second Order Methods and Randomness,
+Talk "On Second Order Methods and Randomness" @
 <a href="https://maths-of-data.github.io">Mathematics of Data Science</a>, Virtual Conference, June 11-12, 2020 (plenary speaker)
 </p>
 
 <p>
 [168]
-On Second Order Methods and Randomness,
+Talk "On Second Order Methods and Randomness" @
 <a href="https://mtl-mlopt.github.io">Montréal Machine Learning and Optimization (MTL MLOpt) Seminar</a>,   via Google Meet, May 8, 2020 (invited) <br>
 <a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
 </p>
 
 <p>
 [167]
-On Second Order Methods and Randomness, One World Optimization Seminar, April 27, 2020 (invited) <br>
+Talk "On Second Order Methods and Randomness" @ One World Optimization Seminar, April 27, 2020 (invited) <br>
  <a href="https://www.youtube.com/watch?v=HGQkct3db-c">  <img src="imgs/youtube.png" alt="YouTube" border="0" height="15px"></a>
  </p>
 
