--- a/index.html
+++ b/index.html
@@ -43,6 +43,28 @@
         <div id="content">
 
 
+
+<h3>July 30, 2020</h3>
+<h1>Filip Hanzely Defended is PhD Thesis</h1>
+<br>
+
+<a href="http://fhanzely.github.io">Filip Hanzely</a> defended his PhD thesis ``Optimization for
+Supervised Machine Learning:  Randomized Algorithms for Data and Parameters" today. His PhD committee:
+<a href="http://pages.cs.wisc.edu/~swright/">Stephen J Wright</a>, <a href="http://tongzhang-ml.org">Tong Zhang</a>,
+<a href="https://www.mathematik.rwth-aachen.de/ca/cd/btbp/?allou=1&ikz=11&gguid=0x963949FB4292ED4DA761C2EE9DAD832B">Raul F Tempone</a>,
+<a href="http://www.bernardghanem.com">Bernard Ghanem</a> and myself. Having started in Fall 2017
+(I joined KAUST in March the same year), Filip is my first PhD student to graduate from KAUST. He managed to complete his
+PhD in less than 3 years, and has done some trully outstanding work, described by the committee as "of an encyclopedic character".
+Filip's next destination is a Research Assistant Professorship at <a href="https://www.ttic.edu">TTIC</a>. Congratulations, Filip!
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>July 17, 2020</h3>
 <h1>ICML Workshop "Beyond First Order Methods in ML Systems"</h1>
 <br>
