--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ PhD in less than 3 years, and has done some trully amazing research, described b
  research and excellent thesis narrative and strcuture".
 
 <br> <br>
-Filip's next destination is a Research Assistant Professorship at <a href="https://www.ttic.edu">TTIC</a>. Congratulations, Filip!
+Filip's next destination is a faculty position at <a href="https://www.ttic.edu">TTIC</a>. Congratulations, Filip!
 
 <br>
 <br>
