--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ PhD in less than 3 years, and has done some trully amazing research, described b
 <a href="https://www.mathematik.rwth-aachen.de/ca/cd/btbp/?allou=1&ikz=11&gguid=0x963949FB4292ED4DA761C2EE9DAD832B">Raul F Tempone</a>,
 <a href="http://www.bernardghanem.com">Bernard Ghanem</a> and myself) as "Outstanding work, in all aspects. It is comprehensive as it synthesises various strands of current research, and is almost of
  an encyclopedic coverage. The work develops deep theoretical results, some of which answer long-standing open problems. Overall, highly innovative
- research and excellent thesis narrative and strcuture".
+ research and excellent thesis narrative and structure".
 
 <br> <br>
 Filip's next destination is a faculty position at <a href="https://www.ttic.edu">TTIC</a>. Congratulations, Filip!
