--- a/index.html
+++ b/index.html
@@ -44,11 +44,30 @@
 
 
 
+
+<h3>August 3, 2020</h3>
+<h1>Paper Accepted to SIAM Journal on Optimization</h1>
+<br>
+
+The paper <a href="https://arxiv.org/abs/1902.03591">"Stochastic Three Points Method for Unconstrained Smooth Minimization"</a>, joint with <a href="https://ehbergou.github.io">El Houcine Bergou</a>,
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> was accepted to
+<a href="https://www.siam.org/publications/journals/siam-journal-on-optimization-siopt">SIAM Journal on Optimization</a>.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>July 30, 2020</h3>
 <h1>Filip Hanzely Defended his PhD Thesis</h1>
 <br>
 
-<a href="http://fhanzely.github.io">Filip Hanzely</a> defended his PhD thesis ``Optimization for
+<a href="http://fhanzely.github.io">Filip Hanzely</a> defended his PhD thesis "Optimization for
 Supervised Machine Learning:  Randomized Algorithms for Data and Parameters" today.
 <br> <br>
 
