--- a/i_papers.html
+++ b/i_papers.html
@@ -304,8 +304,7 @@
 
           [98] Aritra Dutta, Filip Hanzely, Jingwei Liang and Peter
           Richtárik<br>
-          <b>Best pair formulation &amp; accelerated scheme for
-            non-convex principal component pursuit</b><br>
+          <b>Best pair formulation &amp; accelerated scheme for non-convex principal component pursuit</b><br>
           To appear in: IEEE Transactions on Signal Processing, 2020 <br>
           [<a href="https://arxiv.org/abs/1905.10598">arXiv</a>]<br>
           <br>
@@ -343,6 +342,7 @@
 
           [93] El Houcine Bergou, Eduard Gorbunov and Peter Richtárik<br>
           <b>Stochastic three points method for unconstrained smooth minimization</b><br>
+          To appear in: SIAM Journal on Optimization <br>
           [<a href="https://arxiv.org/abs/1902.03591">arXiv</a>] [code: STP]<br>
           <br>
 
