--- a/i_papers.html
+++ b/i_papers.html
@@ -305,7 +305,7 @@
           [98] Aritra Dutta, Filip Hanzely, Jingwei Liang and Peter
           Richtárik<br>
           <b>Best pair formulation &amp; accelerated scheme for non-convex principal component pursuit</b><br>
-          To appear in: IEEE Transactions on Signal Processing, 2020 <br>
+          <a href="https://ieeexplore.ieee.org/abstract/document/9145595">IEEE Transactions on Signal Processing, 2020</a> <br>
           [<a href="https://arxiv.org/abs/1905.10598">arXiv</a>]<br>
           <br>
 
