--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
 
 
 
+<h3>August 7, 2020</h3>
+<h1>Senior PC Memeber for IJCAI 2021</h1>
+<br>
+
+I've accepted an invite to become  Senior Program Committee member for IJCAI 2021.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 
 <h3>August 3, 2020</h3>
 <h1>Paper Accepted to SIAM Journal on Optimization</h1>
@@ -685,6 +702,11 @@ Learning and Optimization (MTL MLOpt) Seminar</a>. This is an online seminar del
 
 
 
+
+
+
+
+
 <h3>April 25, 2020</h3>
 <h1>Talk at the One World Optimization Seminar</h1>
 
@@ -1211,12 +1233,18 @@ I am in excellent company:<br><br>
 <br>
 <br>
 
+
+
+
 <h3>February 8, 2020</h3>
 <h1>AAAI in New York</h1>
 
 <br> <a href="https://konstmish.github.io">Konstantin</a> is about to receive a Best Reviewer Award at AAAI 20 in New York. <a href="http://www.adelbibi.com">Adel</a> is presenting our paper
  <a href="https://arxiv.org/abs/1902.01272">"A stochastic derivative-free optimization method with importance sampling"</a>,
- joint work with El Houcine Bergou, Ozan Sener, Bernard Ghanem and myself, at the event.</br>
+ joint work with El Houcine Bergou, Ozan Sener, Bernard Ghanem and myself, at the event.</br> <br>
+
+
+ Update (May 3): Here is a <a href="https://cemse.kaust.edu.sa/vcc/news/kaust-cs-student-recognized-aaai-outstanding-program-committee-award">KAUST article about Konstantin and his achievements.</a> I am very proud.
 
 <br>
 <br>
