--- a/i_papers.html
+++ b/i_papers.html
@@ -546,6 +546,7 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
           [65] Nicolas Loizou and Peter Richtárik<br>
           <b>Momentum and stochastic momentum for stochastic gradient,
             Newton, proximal point and subspace descent methods</b><br>
+            To appear in Computational Optimization and Applications (COAP) <br>
           [<a href="https://arxiv.org/abs/1712.09677">arXiv</a>]<br>
           <br>
 
