--- a/i_team.html
+++ b/i_team.html
@@ -57,9 +57,10 @@
 
           <h2>Postdocs </h2>
           <ul>
-            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)<br></li>
-            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-present)<br></li>
-            <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)<br></li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (8/2020-present)</li>
+            <li><a href="https://mher-safaryan.github.io">Mher Safaryan</a> (10/2019-present)</li>
+            <li><a href="https://zhizeli.github.io">Zhize Li</a> (9/2019-present)</li>
+            <li><a href="https://adil-salim.github.io">Adil Salim</a> (2/2019-present)</li>
             <li><a href="https://qianxunk.github.io">Xun Qian</a> (11/2018-present)</li>
             <li><a href="https://ehbergou.github.io">El Houcine Bergou</a> (1/2018-1/2019)<br></li>
             <li><a href="https://aritradutta.weebly.com">Aritra Dutta</a> (5/2017<span class="style1" style="width: 300px;">-5/2019</span>)</li>
@@ -72,7 +73,7 @@
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="http://www.ali-sa.org/">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
-            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-present)</li>
+            <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020)</li>
           </ul>
 
           <h2>MS Students </h2>
@@ -88,6 +89,8 @@
 
           <h2> Research Interns</h2>
           <ul>
+            <li>Wenlin Chen (University of Manchester), 8/2020-present</li>
+            <li>Rustem Islamov (Moscow Institute of Physics and Technology), 6/2020-present</li>
             <li><a href="https://othmanesebbouh.github.io">Othmane Sebbouh</a> (Ecole Polytechnique), 5/2020-present</li>
             <li><a href="https://rka97.github.io">Ahmed Khaled</a> (Cairo University), 4/2020-present</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 2/2020-3/2020<br> </li>
@@ -116,8 +119,7 @@
           <ul>
             <li><a href="http://sstich.ch">Sebastian Stich</a> (EPFL),
               11/2019</li>
-            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a>
-              (Grenoble), 11-12/2019</li>
+            <li><a href="https://grishchenko.org">Dmitriy Grishchenko</a> (Grenoble), 11-12/2019</li>
             <li><a href="https://scholar.google.com.hk/citations?user=dQSGQSAAAAAJ&amp;hl=zh-CN">Xiuxian Li</a> (Nanyang Technological University), 9/2019<br> </li>
             <li><a href="http://www.ntu.edu.sg/home/xbresson/">Xavier Bresson</a> (NTU Singapore), 4/2019<br> </li>
             <li><a href="https://www.hse.ru/en/org/persons/219293044">Alexey Kroshnin</a> (Moscow &amp; Lyon), 4/2019<br> </li>
