--- a/index.html
+++ b/index.html
@@ -62,6 +62,29 @@ Proximal Point and Subspace Descent Methods"</a>, joint with <a href="https://ww
 
 
 
+<h3>August 8, 2020</h3>
+<h1>New Research Intern</h1>
+<br>
+
+
+
+Wenlin Chen has joined my group as a remote intern until about the end of September 2020. During the internship, Wenlin will be working on communication efficient methods for federated learning.
+Wenlin has a BS degree in mathematics from University of Manchester (ranked top 1.5% in the cohort), and is about to start an MPhil in Machine Learning at the University of Cambridge in October 2020.
+Wenlin is a coauthor of an ECML 2020 paper entitled <a href="http://www.cs.man.ac.uk/%7Egbrown/publications/ecml2020webb.pdf">To Ensemble or Not Ensemble: When does End-To-End Training Fail?</a>
+ where he investigated novel information-theoretic methods of training deep neural network ensembles, focusing on the resulting regularization effects and trade-offs between individual model
+ capacity and ensemble diversity. He also conducted large-scale ensemble deep learning experiments using the university’s HPC Cluster CSF3. 
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
 <h3>August 7, 2020</h3>
 <h1>Senior PC Memeber for IJCAI 2021</h1>
 <br>
