--- a/i_events.html
+++ b/i_events.html
@@ -51,8 +51,33 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 <ol reversed>
 
+  <li> <a href="https://www.siam.org/conferences/cm/conference/op20"><b>OP20: SIAM Conference on Optimization</b></a>, postponed until 2021
 
-<li> <a href="https://nips.cc"><b> NeurIPS 2020</b></a>
+    <ul>
+    <li> Scientific Committee Member. Jointly responsible for the invitation of plenary and tutorial speakers. </li>
+    </ul>
+
+
+  </li>
+
+
+<li><b>IJCAI 2021</b>, Montreal, Canada
+
+<ul>
+<li> Senior Program Committee Member </li>
+</ul>
+</li>
+
+
+<li> <a href="https://iclr.cc/Conferences/2020"><b> ICLR 2021</b></a>, Vienna, Austria, May 4-8, 2021
+
+<ul>
+<li> Area Chair </li>
+</ul>
+
+</li>
+
+<li> <a href="https://nips.cc"><b> NeurIPS 2020</b></a>, Virtual, December 5-12, 2020
 
 <ul>
   <li> Area Chair </li>
@@ -78,32 +103,9 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 
 
 
-<li><a href="http://federated-learning.org/fl-icml-2020/"><b>ICML 2020: International Workshop on Federated Learning for User Privacy and Data Confidentiality</b></a>, Virtual, July 17-18, 2020
-
-<ul>
-  <li> Program Committee Member </li>
-</ul>
-
-</li>
-
-<li><a href = "https://icml.cc"><b>ICML 2020</b></a>, Virtual, July 12-18, 2020
-
-<ul>
-  <li> Expert Reviewier </li>
-</ul>
-
-</li>
 
 
-<li> <a href="https://www.siam.org/conferences/cm/conference/op20"><b>OP20: SIAM Conference on Optimization 2020</b></a>, Hong Kong, May 26-29,
-2020
 
-  <ul>
-  <li> Scientific Committee Member. Jointly responsible for the invitation of plenary and tutorial speakers. </li>
-  </ul>
-
-
-</li>
 
 </ol>
 
@@ -114,6 +116,23 @@ Below is a list of conferences, and workshops I am/was involved with as an organ
 <ol reversed>
 
 
+
+  <li><a href="http://federated-learning.org/fl-icml-2020/"><b>ICML 2020: International Workshop on Federated Learning for User Privacy and Data Confidentiality</b></a>, Virtual, July 17-18, 2020
+
+  <ul>
+    <li> Program Committee Member </li>
+  </ul>
+
+  </li>
+
+
+  <li><a href = "https://icml.cc"><b>ICML 2020</b></a>, Virtual, July 12-18, 2020
+
+  <ul>
+    <li> Expert Reviewier </li>
+  </ul>
+
+  </li>
 
 
 <li><b><a href="https://nips.cc/Conferences/2019">NeurIPS 2019</a></b>, Montreal, Canada, December 8-14, 2019
