--- a/index.html
+++ b/index.html
@@ -44,6 +44,41 @@
 
 
 
+<h3>August 25, 2020</h3>
+<h1>Apple Virtual Workshop on Privacy Preserving Machine Learning</h1>
+<br>
+
+I have been invited to give a talk at the "Virtual Workshop on Privacy Preserving Machine Learning", hosted by <a href="https://www.apple.com">Apple</a>. The workshop is a two-day event starting today.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>August 19, 2020</h3>
+<h1>Paper Accepted to SIAM Journal on Scientific Computing</h1>
+<br>
+
+The paper <a href="https://arxiv.org/abs/1903.07971">"Convergence Analysis of Inexact Randomized Iterative Methods"</a>, joint with <a href="https://www.maths.ed.ac.uk/~s1461357/">Nicolas Loizou</a>, was accepted to
+<a href="https://www.siam.org/publications/journals/siam-journal-on-scientific-computing-sisc">SIAM Journal on Scientific Computing</a>.
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+
 <h3>August 12, 2020</h3>
 <h1>Paper Accepted to Computational Optimization and Applications</h1>
 <br>
