--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,12 @@
 
           <h1> Prepared in 2020 </h1>
 
+
+          [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
+          <b>Optimal and practical algorithms for smooth and strongly convex decentralized optimization</b><br>
+          [<a href="https://arxiv.org/abs/2006.11773">arXiv</a>] [code: APAPC, OPAPC, Algorihm 3]  <br>
+          <br>
+
           [136] Ahmed Khaled, Othmane Sebbouh, Nicolas Loizou, Robert M. Gower, and Peter Richtárik <br>
           <b>Unified analysis of stochastic gradient methods for composite convex and smooth optimization</b><br>
           [<a href="https://arxiv.org/abs/2006.11573">arXiv</a>] [code: SGD]  <br>
@@ -318,6 +324,7 @@
           [96] Nicolas Loizou and Peter Richtárik<br>
           <b>Convergence analysis of inexact randomized iterative
             methods</b><br>
+            To appear in SIAM Journal on Scientific Computing <br>
           [<a href="https://arxiv.org/abs/1903.07971">arXiv</a>] [code:
           iBasic, iSDSA, iSGD, iSPM, iRBK, iRBCD]<br>
           <br>
